# my-take-home

./: .env.example  .gitignore  APPROACH.md  Dockerfile  Dockerfile.inference  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  submit.sh
proto/: tts.proto
scripts/: dev-queue.sh
src/tts_api/: main.py
src/tts_api/api/: deps.py
src/tts_api/api/v1/: router.py  schemas.py  speech.py
src/tts_api/core/: config.py  logging.py
src/tts_api/inference/: __init__.py  client.py  healthcheck.py  server.py  tts_pb2.py  tts_pb2_grpc.py
src/tts_api/middleware/: metrics.py  rate_limit.py
src/tts_api/services/: audio.py  cache.py  concurrency.py  sentence.py
src/tts_api/services/tts/: __init__.py  base.py  celery_tts.py  factory.py  grpc_tts.py  kokoro.py  metrics.py  mock.py
src/tts_api/workers/: celery_app.py  tasks.py
static/: index.html
tests/: conftest.py  loadtest.py  test_auth.py  test_concurrency.py  test_speech.py  test_streaming.py  test_tts_module.py
