[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-api"
version = "0.1.0"
description = "High-scale Text-to-Speech API powered by FastAPI and Kokoro"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "kokoro>=0.9.4",
    "torch>=2.0",
    "numpy>=1.24",
    "soundfile>=0.12.1",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "cachetools>=5.3",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "anyio[trio]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tts_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/tts_api --cov-report=term-missing -v"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "B904"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
